fix(dashboard/chart): improvements in the title chart
improvements in the title chart in the chart.html

--- a/cotacao/templates/dashboard/chart.html
+++ b/cotacao/templates/dashboard/chart.html
@@ -21,7 +21,7 @@
                     type: 'column'
                 },
                 title: {
-                    text: 'Relatório de indices da cotação do {{ coin }}'
+                    text: 'Relatório de indices de variação da moeda {{ coin }}'
                 },
                 subtitle: {
                     text: 'Consulta realizada em {{ current }}.'
