fix(home/index): improvements in the index.html
Contents were described in the hero section and description section

--- a/cotacao/templates/home/index.html
+++ b/cotacao/templates/home/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Home{% endblock %}
+{% block title %}Cotações{% endblock %}
 
 {% block content %}
 <section class="section gradient-banner">
@@ -27,7 +27,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1 text-center text-md-left">
 				<h1 class="text-white font-weight-bold mb-4">Consulta cotação</h1>
-                <p class="text-white mb-5">Tenha a cotação do Real, Euro e Iene com base no dolar.</p>
+                <p class="text-white mb-5">As taxas de câmbio acompanham as taxas de referência de câmbio publicadas pelo Banco Central Europeu.</p>
 			</div>
 			<div class="col-md-6 text-center order-1 order-md-2">
 				<img class="img-fluid" src="{% static 'images/mobile.png' %}" alt="screenshot">
@@ -43,21 +43,21 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
 					<i class="ti-paint-bucket text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">themes made easy</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Dados atualizados</h3>
+					<p class="regular text-muted">Os dados são atualizados por volta das 16:00 CET
+						todos os dias úteis e publicados pelo Banco Central Europeu.</p>
 				</div>
 				<div class="col-lg-4 col-md-6 mt-5 mt-md-0 text-center">
 					<i class="ti-shine text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">powerful design</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Comodidade</h3>
+					<p class="regular text-muted">Com a nossa plataforma web, você poderá ter a cotação de qualquer
+						lugar e a qualquer momento. Gerencie as cotações sem qualquer tipo de taxa.</p>
 				</div>
 				<div class="col-lg-4 col-md-12 mt-5 mt-lg-0 text-center">
 					<i class="ti-thought text-primary h1"></i>
-					<h3 class="mt-4 text-capitalize h5 ">creative content</h3>
-					<p class="regular text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam non, recusandae
-						tempore ipsam dignissimos molestias.</p>
+					<h3 class="mt-4 text-capitalize h5 ">Análises</h3>
+					<p class="regular text-muted">Faça uso do gráfico e analise o desempenho de cada moeda em
+						comparativo com o dolar.</p>
 				</div>
 			</div>
 		</div>
