fix(cotacaoapi/views): fix the method in class CoinViewSet
The method get needed be fixed to provide a response.

--- a/cotacao/templates/footer.html
+++ b/cotacao/templates/footer.html
@@ -64,6 +64,6 @@
     <small class="text-secondary">Copyright &copy; <script>document.write(new Date().getFullYear())</script>. Designed &amp; Developed by <a href="https://www.linkedin.com/in/julio-dos-reis-firmino-6b11246a/">Julio Reis</a></small class="text-secondary">
   </div>
 	<div class="text-center bg-dark py-1">
-   <small> <p>Distributed By <a href="https://themewagon.com/">Firmino's</a></p></small class="text-secondary">
+   <small> <p>Distributed By <a href="https://www.linkedin.com/in/julio-dos-reis-firmino-6b11246a/">Firmino's</a></p></small class="text-secondary">
   </div>
 </footer>
