feat(templates/header): implanted the link to documentation
The link with the documentation of api was implanted in header.html

--- a/cotacao/templates/header.html
+++ b/cotacao/templates/header.html
@@ -26,7 +26,7 @@
           </ul>
         </li>
             <li class="nav-item @@about">
-              <a class="nav-link" href="https://www.google.com/">API Doc</a>
+              <a class="nav-link" href="https://documenter.getpostman.com/view/14303483/UV5XhxV6">API Doc</a>
             </li>
       </ul>
     </div>
