test(dashboard/coins): improvements in input fields
improvements in input fields

--- a/cotacao/templates/dashboard/coins.html
+++ b/cotacao/templates/dashboard/coins.html
@@ -70,7 +70,7 @@
                                         <div class="col-md-6 mb-2">
 <!--                                            <input class="form-control main" name="date" type="text" placeholder="data" required>-->
                                             <div class="input-group date" data-provide="datepicker">
-                                                <label class="input-group-text">Data</label>
+                                                <label class="input-group-text">Selecione a Data:</label>
                                                 <input type="text" class="form-control" name="date" id="exemplo">
                                                 <div class="input-group-addon">
                                                     <span class="glyphicon glyphicon-th"></span>
@@ -81,17 +81,15 @@
                                         <!-- Coin -->
                                         <div class="input-group mb-3">
                                           <div class="input-group-prepend">
-                                            <label class="input-group-text" for="inputGroupSelect01">Moeda</label>
+                                            <label class="input-group-text" for="inputGroupSelect01">Selecione a Moeda:</label>
                                           </div>
                                           <select class="custom-select" id="inputGroupSelect01" name="coin">
-                                            <option selected>Escolher...</option>
-                                            <option value="BRL">Real</option>
+                                            <option value="BRL" selected>Real</option>
                                             <option value="EUR">Euro</option>
                                             <option value="JPY">Iene</option>
                                           </select>
                                         </div >
                                             <button type="submit" class="btn btn-primary btn-lg btn-block">Enviar</button>
-<!--                                            <button type="submit" class="btn btn-primary btn-sm">Enviar</button>-->
                                         </div>
                                 </form>
                             </div>
