fix(dashboard/coin): adjustment code
adjustment of buttons

--- a/cotacao/templates/dashboard/coins.html
+++ b/cotacao/templates/dashboard/coins.html
@@ -77,9 +77,9 @@
                                             </div>
                                         </div>
                                         <!-- Coin -->
-                                        <div class="input-group mb-3">
+                                        <div class="input-group col-md-6 mb-2">
                                           <div class="input-group-prepend">
-                                            <label class="input-group-text" for="inputGroupSelect01">Selecione a Moeda:</label>
+                                            <label class="input-group-text input-md" for="inputGroupSelect01">Selecione a Moeda:</label>
                                           </div>
                                           <select class="custom-select" id="inputGroupSelect01" name="coin">
                                             <option value="BRL" selected>Real</option>
@@ -87,11 +87,11 @@
                                             <option value="JPY">Iene</option>
                                           </select>
                                         </div >
-                                            <button type="submit" class="btn btn-primary btn-lg btn-block">Enviar</button>
-                                        </div>
+                                        <button type="submit" class="btn btn-primary btn-lg btn-block">Enviar</button>
+                                    </div>
                                 </form>
                             </div>
-                         </div>
+                        </div>
                     </div>
                 </div>
 			</div>
