--- a/cotacao/templates/dashboard/chart.html
+++ b/cotacao/templates/dashboard/chart.html
@@ -13,7 +13,7 @@
 <body>
 {% block content %}
 <section class="section page-title">
-  <div id="container"></div>
+  <div id="container">
       <script src="https://code.highcharts.com/highcharts.src.js"></script>
           <script>
             Highcharts.chart('container', {
@@ -36,6 +36,7 @@
                 }]
             });
           </script>
+  </div>
 </section>
 {% endblock %}
 </body>
