--- a/cotacao/templates/header.html
+++ b/cotacao/templates/header.html
@@ -28,6 +28,9 @@
             <li class="nav-item @@about">
               <a class="nav-link" href="https://documenter.getpostman.com/view/14303483/UV5XhxV6">API Doc</a>
             </li>
+            <li class="nav-item @@about">
+                  <a class="nav-link" href="https://github.com/julioreis-dev/price_coins">Repositório</a>
+            </li>
       </ul>
     </div>
   </div>
