--- a/cotacao/templates/footer.html
+++ b/cotacao/templates/footer.html
@@ -9,13 +9,13 @@
             <!-- Social Site Icons -->
             <ul class="social-icon list-inline">
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/themefisher"><i class="ti-facebook"></i></a>
+                <a href="https://pt-br.facebook.com/grupobrmed"><i class="ti-facebook"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://twitter.com/themefisher"><i class="ti-twitter"></i></a>
+                <a href="https://twitter.com/grupobrmed"><i class="ti-twitter"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.instagram.com/themefisher/"><i class="ti-instagram"></i></a>
+                <a href="https://www.instagram.com/grupobrmed/"><i class="ti-instagram"></i></a>
               </li>
             </ul>
           </div>
