feat(templates/header): included github icon
the file header.html was included github icon

--- a/cotacao/templates/header.html
+++ b/cotacao/templates/header.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="https://documenter.getpostman.com/view/14303483/UV5XhxV6">API Doc</a>
             </li>
             <li class="nav-item @@about">
-                  <a class="nav-link" href="https://github.com/julioreis-dev/price_coins">Repositório</a>
+                <a class="nav-link" href="https://github.com/julioreis-dev/price_coins"><i class="fa fa-github" style="font-size:24px"></i></a>
             </li>
       </ul>
     </div>
