--- a/cotacao/templates/header.html
+++ b/cotacao/templates/header.html
@@ -31,6 +31,9 @@
             <li class="nav-item @@about">
                 <a class="nav-link" href="https://github.com/julioreis-dev/price_coins"><i class="fa fa-github" style="font-size:24px"></i></a>
             </li>
+            <li class="nav-item @@about">
+                <a class="nav-link" href="https://www.linkedin.com/in/julio-dos-reis-firmino-6b11246a/"><i class="fa fa-linkedin" style="font-size:24px"></i></a>
+            </li>
       </ul>
     </div>
   </div>
